--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,10 @@
     <string name="wizard_example_master">Master-%s</string>
     <string name="wizard_example_input_credit_wrong">Error: invalid credit card number</string>
     <string name="wizard_example_just_a_second">Just a second...</string>
+    <string name="search_results" translatable="false">Search Results</string>
+    <string name="cant_play_video" translatable="false">Can\'t play video</string>
+    <string name="channel_removed" translatable="false">Channel Removed</string>
+    <string name="remove_program" translatable="false">Remove Program</string>
+    <string name="another_option" translatable="false">Another Option</string>
+    <string name="another_option_message" translatable="false">Another program action</string>
 </resources>
